--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Interior Design </title>
+    <title> Hytech Interiors  </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -72,7 +72,7 @@
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 display-5 text-white"><span class="text-primary">i</span>DESIGN</h1>
+                    <h1 class="m-0 display-5 text-white"><span class="text-primary">Hytech</span>Interiors</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -108,7 +108,12 @@
                         <h1 class="flaticon-office font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Our Office</h5>
-                            <p class="m-0">123 Street, New York, USA</p>
+                            <p class="m-0">#3,
+                                Ex-Service Man Colony, 
+                                V.G.Rao nagar,
+                                Avarampalayam,
+                                Ganapathy(PO),
+                                Coimbatore-641006</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +122,7 @@
                         <h1 class="flaticon-email font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Email Us</h5>
-                            <p class="m-0">info@example.com</p>
+                            <p class="m-0">hytecinteriors@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +131,7 @@
                         <h1 class="flaticon-telephone font-weight-normal text-primary m-0 mr-3"></h1>
                         <div class="d-flex flex-column">
                             <h5>Call Us</h5>
-                            <p class="m-0">+012 345 6789</p>
+                            <p class="m-0">+91-9500255551</p>
                         </div>
                     </div>
                 </div>
